crates/analyzer/tests/snapshots/errors__call_balance_with_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `balance` expects 0 arguments, but 1 was provided
  ┌─ [snippet]:3:3
  │
3 │   balance(address(0))
  │   ^^^^^^^ ---------- supplied 1 argument
  │   │        
  │   expects 0 arguments


